--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,18 +21,20 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  
   assets:
     - assets/images/
   
   fonts:
     - family: cairo
       fonts:
-        - asset: assets/fonts/Cairo-Regular.ttf
+        - asset: assets/font/Cairo-Regular.ttf
           weight: 400
-        - asset: assets/fonts/Cairo-Medium.ttf
+        - asset: assets/font/Cairo-Medium.ttf
           weight: 500
-        - asset: assets/fonts/Cairo-SemiBold.ttf
+        - asset: assets/font/Cairo-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/Cairo-Bold.ttf
+        - asset: assets/font/Cairo-Bold.ttf
           weight: 700
 
