--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,12 @@ dependencies:
   firebase_core: ^4.2.1
   flutter:
     sdk: flutter
-  flutter_localization: ^0.3.3
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.2.3
+  gap: ^3.0.1
   shared_preferences: ^2.5.3
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
